--- a/apps/documenteditor/main/app/template/StatusBar.template
+++ b/apps/documenteditor/main/app/template/StatusBar.template
@@ -12,8 +12,8 @@
     </div>
     <div class="status-group" style="">
         <div class="separator short el-edit"></div>
-        <span id="btn-cnt-lang" class="el-edit margin-top-small" data-layout-name="statusBar-textLang"></span>
-        <span id="btn-doc-lang" class="el-edit margin-top-small" data-layout-name="statusBar-docLang"></span>
+        <span id="btn-cnt-lang" class="el-edit margin-top-small hidden" data-layout-name="statusBar-textLang"></span>
+        <span id="btn-doc-lang" class="el-edit margin-top-small hidden" data-layout-name="statusBar-docLang"></span>
         <div class="separator short el-edit space"></div>
         <span id="btn-doc-spell" class="el-edit margin-top-small"></span>
         <div class="separator short el-edit el-lang"></div>
