--- a/apps/documenteditor/main/app/template/StatusBar.template
+++ b/apps/documenteditor/main/app/template/StatusBar.template
@@ -11,12 +11,12 @@
         <label id="label-action" class="status-label margin-top-large" data-layout-name="statusBar-actionStatus"></label>
     </div>
     <div class="status-group" style="">
-        <div class="separator short el-edit"></div>
+        <div class="separator short el-edit hidden"></div>
         <span id="btn-cnt-lang" class="el-edit margin-top-small hidden" data-layout-name="statusBar-textLang"></span>
         <span id="btn-doc-lang" class="el-edit margin-top-small hidden" data-layout-name="statusBar-docLang"></span>
         <div class="separator short el-edit space"></div>
-        <span id="btn-doc-spell" class="el-edit margin-top-small"></span>
-        <div class="separator short el-edit el-lang"></div>
+        <span id="btn-doc-spell" class="el-edit margin-top-small hidden"></span>
+        <div class="separator short el-edit el-lang hidden"></div>
         <div id="btn-doc-review" class="el-edit el-review margin-top-small" style="display: inline-block;"></div>
         <div class="separator short el-edit el-review"></div>
         <div class="separator short hide-select-tools"></div>
